# python-cheat-sheet

./: .gitignore  README.md  pyproject.toml
homemade cheat sheets/: Basics_Data_Stucture.html  Basics_Data_Stucture.ipynb  Linux_CMD.ipynb  List_tuple_Practice.html  List_tuple_Practice.ipynb  List_tuple_Practice.md  Numpy_Practice.ipynb  Python_Basics.ipynb  Set_Dictionary_Practice .html  Set_Dictionary_Practice.html  Set_Dictionary_Practice.ipynb  Set_Dictionary_Practice.md  bs-regex-cheat-sheet.html  bs-regex-cheat-sheet.ipynb
src/python_cheat_sheet/: Basics_Data_Stucture.ipynb  Basics_Data_Stucture.md  List_tuple_Practice.ipynb  List_tuple_Practice.md  MongoDB_CLI.ipynb  Python_Basics.ipynb  Python_Basics.md  Set_Dictionary_Practice.ipynb  Set_Dictionary_Practice.md  bs-regex-cheat-sheet.md
